# python-top-lib

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/analytics/: query.py
src/api/: main.py  models.py
src/api/routers/: validate.py
src/browser/: app.js  index.html  style.css
src/cli/: app.py
src/core/: config.py  logger.py  utils.py
src/dq/: checks.py  rules.py
src/etl/: extract.py  load.py  runner.py  s3.py  snowflake.py  transform.py
src/ui/: dashboard.py  widgets.py
tests/: test_api.py  test_dq.py  test_etl.py
