[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-top-lib"
version = "0.1.0"
description = "Enterprise Data Platform - Production-grade data operations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Data Team", email = "data@example.com"}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "polars>=0.19.0",
    "duckdb>=0.9.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "textual>=0.40.0",
    "typer>=0.9.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "boto3>=1.28.0",
    "snowflake-connector-python>=3.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "httpx>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src" = "src"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
namespace_packages = true
